--- a/index.html
+++ b/index.html
@@ -20,38 +20,74 @@
                 <i class="fa fa-circle text-green"></i> Online
             </div>
         </div>
+
         <ul class="list-unstyled components">
-            <li class="active">
+            <li class="">
                 <a href="index.html">
                     <i class="fas fa-home"></i>
                     Home
                 </a>
             </li>
-            <li>
-                <a href="#chart" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                    <i class="fas fa-chart-line"></i>
-                    Charts
+            <li class="">
+                <a href="#layout" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="far fa-gem"></i>
+                    Layouts
                 </a>
-                <ul class="collapse list-unstyled show" >
+                <ul class="collapse list-unstyled" id="layout">
                     <li>
-                        <a href="pages/chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
+                        <a href="pages/top-navigation.html"><i class="far fa-circle mr-2"></i> Top Navigation</a>
                     </li>
                     <li>
-                        <a href="pages/google-chart.html"><i class="far fa-circle"></i> Google Chart</a>
+                        <a href="pages/boxed.html"><i class="far fa-circle mr-2"></i> Boxed</a>
+                    </li>
+                    <li>
+                        <a href="pages/fixed.html"><i class="far fa-circle mr-2"></i> Fixed</a>
+                    </li>
+                    <li>
+                        <a href="pages/collapsed-sidebar.html"><i class="far fa-circle mr-2"></i>
+                            Collapsed Sidebar</a>
                     </li>
                 </ul>
             </li>
+
             <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                    <i class="fas fa-table"></i>
-                    Tables
+                <a href="#ui" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-laptop"></i>
+                    UI Elements
                 </a>
-                <ul class="collapse list-unstyled show" id="homeSubmenu">
+                <ul class="collapse list-unstyled" id="ui">
                     <li>
-                        <a href="pages/basic_tables.html"><i class="far fa-circle"></i> Basic Tables</a>
+                        <a href="pages/colors.html"><i class="far fa-circle mr-2"></i> Colors</a>
                     </li>
                     <li>
-                        <a href="pages/data-tables.html"><i class="far fa-circle"></i> Data Tables</a>
+                        <a href="pages/typography.html"><i class="far fa-circle mr-2"></i> typography</a>
+                    </li>
+                    <li>
+                        <a href="pages/icons.html"><i class="far fa-circle mr-2"></i> Icons</a>
+                    </li>
+                    <li>
+                        <a href="pages/buttons.html"><i class="far fa-circle mr-2"></i> Buttons</a>
+                    </li>
+                    <li>
+                        <a href="pages/notifications.html"><i class="far fa-circle mr-2"></i> Notifications</a>
+                    </li>
+                    <li>
+                        <a href="pages/modals.html"><i class="far fa-circle mr-2"></i> Modals</a>
+                    </li>
+                    <li>
+                        <a href="pages/progress-bars.html"><i class="far fa-circle mr-2"></i> Progress Bars</a>
+                    </li>
+                    <li>
+                        <a href="pages/tabs.html"><i class="far fa-circle mr-2"></i> Tabs</a>
+                    </li>
+                    <li>
+                        <a href="pages/sliders.html"><i class="far fa-circle mr-2"></i> Sliders</a>
+                    </li>
+                    <li>
+                        <a href="pages/tree-views.html"><i class="far fa-circle mr-2"></i> Tree Views</a>
+                    </li>
+                    <li>
+                        <a href="pages/netables.html"><i class="far fa-circle mr-2"></i> Nestables</a>
                     </li>
                 </ul>
             </li>
@@ -60,9 +96,112 @@
                     <i class="fa fa-edit"></i>
                     Forms
                 </a>
-                <ul class="collapse list-unstyled show" id="form">
+                <ul class="collapse list-unstyled" id="form">
                     <li>
-                        <a href="pages/form.html"><i class="far fa-circle"></i> Basic Forms</a>
+                        <a href="pages/form.html"><i class="far fa-circle mr-2"></i> Forms Elements</a>
+                    </li>
+                    <li>
+                        <a href="pages/form-layout.html"><i class="far fa-circle mr-2"></i> Forms Layouts</a>
+                    </li>
+                    <li>
+                        <a href="pages/form-wizard.html"><i class="far fa-circle mr-2"></i> Forms Wizard</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="pages/cards.html">
+                    <i class="fas fa-chart-line"></i>
+                    Cards
+                </a>
+            </li>
+            <li>
+                <a href="pages/widgets.htmls">
+                    <i class="fa fa-flask"></i>
+                    Widgets
+                </a>
+            </li>
+            <li>
+                <a href="#map" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-map-marked-alt"></i>
+                    Maps
+                </a>
+                <ul class="collapse list-unstyled" id="map">
+                    <li>
+                        <a href="pages/map-googles.html"><i class="far fa-circle mr-2"></i> Google Maps</a>
+                    </li>
+                    <li>
+                        <a href="pages/map-vector.html"><i class="far fa-circle mr-2"></i> Vector Maps</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#chart" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-chart-line"></i>
+                    Charts
+                </a>
+                <ul class="collapse list-unstyled" id="chart">
+                    <li>
+                        <a href="pages/chart-js.html"><i class="far fa-circle mr-2"></i> Chart JS</a>
+                    </li>
+                    <li>
+                        <a href="pages/chart-google.html"><i class="far fa-circle mr-2"></i> Google Chart</a>
+                    </li>
+                    <li>
+                        <a href="pages/chart-google.html"><i class="far fa-circle mr-2"></i> Inline Charts</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-table"></i>
+                    Tables
+                </a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="pages/basic_tables.html"><i class="far fa-circle mr-2"></i> Basic Tables</a>
+                    </li>
+                    <li>
+                        <a href="pages/data-tables.html"><i class="far fa-circle mr-2"></i> Data Tables</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#extra" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-dungeon"></i>
+                    Extra
+                </a>
+                <ul class="collapse list-unstyled" id="extra">
+                    <li>
+                        <a href="pages/extra-invoice.html"><i class="far fa-circle mr-2"></i> Invoice</a>
+                    </li>
+                    <li>
+                        <a href="pages/extra-404.html"><i class="far fa-circle mr-2"></i> 404 Page</a>
+                    </li>
+                    <li>
+                        <a href="pages/extra-500.html"><i class="far fa-circle mr-2"></i> 500 Page</a>
+                    </li>
+                    <li>
+                        <a href="pages/extra-blank.html"><i class="far fa-circle mr-2"></i> Blank Page</a>
+                    </li>
+                    <li>
+                        <a href="pages/extra-login.html"><i class="far fa-circle mr-2"></i> Login</a>
+                    </li>
+                    <li>
+                        <a href="pages/extra-register.html"><i class="far fa-circle mr-2"></i> Register</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#menus" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-sitemap"></i>
+                    Menu
+                </a>
+                <ul class="collapse list-unstyled" id="menus">
+                    <li>
+                        <a href="pages/menu-lv1.html"><i class="far fa-circle mr-2"></i> Level 1</a>
+                    </li>
+                    <li>
+                        <a href="pages/menu-lv2.html"><i class="far fa-circle mr-2"></i> Level 2 & Sub</a>
                     </li>
                 </ul>
             </li>
@@ -97,7 +236,7 @@
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-messages-footer">
-                            <a href="">Read All Messages</a>
+                            <a href="pages/">Read All Messages</a>
                         </li>
                     </ul>
                 </li>
@@ -107,7 +246,7 @@
                     </a>
                     <ul class="dropdown-menu dropdown-alerts">
                         <li>
-                            <a href="mailbox.html" class="dropdown-item">
+                            <a href="pages/mailbox.html" class="dropdown-item">
                                 <div>
                                     <i class="fa fa-envelope fa-fw"></i> You have 16 messages
                                     <span class="float-right text-muted small">4 minutes ago</span>
@@ -116,7 +255,7 @@
                         </li>
                         <li class="dropdown-divider"></li>
                         <li>
-                            <a href="profile.html" class="dropdown-item">
+                            <a href="pages/profile.html" class="dropdown-item">
                                 <div>
                                     <i class="fa fa-twitter fa-fw"></i> 3 New Followers
                                     <span class="float-right text-muted small">12 minutes ago</span>
@@ -125,7 +264,7 @@
                         </li>
                         <li class="dropdown-divider"></li>
                         <li>
-                            <a href="grid_options.html" class="dropdown-item">
+                            <a href="pages/grid_options.html" class="dropdown-item">
                                 <div>
                                     <i class="fa fa-upload fa-fw"></i> Server Rebooted
                                     <span class="float-right text-muted small">4 minutes ago</span>
@@ -135,7 +274,7 @@
                         <li class="dropdown-divider"></li>
                         <li>
                             <div class="text-center link-block">
-                                <a href="notifications.html" class="dropdown-item">
+                                <a href="pages/notifications.html" class="dropdown-item">
                                     <strong>See All Alerts</strong>
                                     <i class="fa fa-angle-right"></i>
                                 </a>
@@ -146,7 +285,7 @@
 
 
                 <li>
-                    <a href="">
+                    <a href="pages/">
                         <i class="fa fa-sign-out-alt"></i> Log out
                     </a>
                 </li>
