--- a/pages/chart-js.html
+++ b/pages/chart-js.html
@@ -42,7 +42,7 @@
                         <a href="chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
                     </li>
                     <li>
-                        <a href="google-chart.html"><i class="far fa-circle"></i> Google Chart</a>
+                        <a href="chart-google.html"><i class="far fa-circle"></i> Google Chart</a>
                     </li>
                 </ul>
             </li>
