--- a/pages/fixed.html
+++ b/pages/fixed.html
@@ -223,9 +223,23 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
-            <div class="row">
-                <div class="col-sm-12"></div>
+            <h1>Fixed <small>Blank example to the fixed layout</small></h1>
+            <div class="callout callout-info">
+                <h4>Tip!</h4>
+
+                <p>Add the fixed class to the body tag to get this layout. The fixed layout is your best option if your sidebar is bigger than your content because it prevents extra unwanted scrolling.</p>
+            </div>
+            <!-- Default box -->
+            <div class="box">
+                <div class="box-header with-border">
+                    <h4 class="box-title">Title</h4>
+                </div>
+                <div class="box-body">
+                    Start creating your amazing application!
+                </div>
+                <div class="box-footer">
+                    Footer
+                </div>
             </div>
         </div>
     </div>
