--- a/pages/boxed.html
+++ b/pages/boxed.html
@@ -223,9 +223,24 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
-            <div class="row">
-                <div class="col-sm-12"></div>
+            <h2>Boxed <small>Layout with collapsed sidebar on load</small></h2>
+            <div class="callout callout-info">
+                <h4>Tip!</h4>
+
+                <p>Add the layout-boxed class to the body tag to get this layout. The boxed layout is helpful when working on
+                    large screens because it prevents the site from stretching very wide.</p>
+            </div>
+            <!-- Default box -->
+            <div class="box">
+                <div class="box-header with-border">
+                    <h4 class="box-title">Title</h4>
+                </div>
+                <div class="box-body">
+                    Start creating your amazing application!
+                </div>
+                <div class="box-footer">
+                    Footer
+                </div>
             </div>
         </div>
     </div>
