--- a/pages/collapsed-sidebar.html
+++ b/pages/collapsed-sidebar.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Bootstrap</title><link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+    <title>My Bootstrap</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap/4.4.1/bootstrap.css">
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -12,7 +13,7 @@
 <body>
 <div class="wrapper">
     <!-- Sidebar -->
-    <nav id="sidebar">
+    <nav id="sidebar" class="active">
         <div class="sidebar-header">
             <a href="../index.html">
                 <img class="admin-avatar rounded-circle" src="../img/admin-avatar.jpg" alt="admin-avatar">
@@ -223,9 +224,15 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Base </h1>
+            <h2>Collapsed Sidebar <small>Layout with collapsed sidebar on load</small></h2>
             <div class="row">
-                <div class="col-sm-12"></div>
+                <div class="col-sm-12">
+                    <div class="callout callout-info">
+                        <h4>Tip!</h4>
+
+                        <p>Add the "active" class to the nav tag to get this layout. You should combine this option with a fixed layout if you have a long sidebar. Doing that will prevent your page content from getting stretched vertically.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
