--- a/pages/forms.html
+++ b/pages/forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Bootstrap</title>
+    <title>My Bootstrap</title><link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap/4.4.1/bootstrap.css">
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
