--- a/pages/form-wizard.html
+++ b/pages/form-wizard.html
@@ -221,84 +221,10 @@
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
-            <h1> Typography </h1>
-            <div class="row mt-5">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <h3>Type Scale</h3>
-                                <p>Pages type scale includes a range of contrasting styles that support the needs of your product and its content.</p>
-                                <p>The type scale is a combination of 8 styles that are supported by the type system. It contains reusable categories of text, each with an intended application and meaning.</p>
-                            </div>
-                            <div class="col-md-8">
-                                <small>Typography Scale - 1.125</small>
-                                <div class="h1 mt-4">
-                                    The quick brown fox jumps over the lazy dog
-                                </div>
-                                <div class="text-muted">
-                                    h1
-                                    <span class="float-right">
-                                    font-size: 2.5rem - line-height:1.2
-                                </span>
-                                </div>
-                                <hr>
-                                <div class="h2">
-                                    The quick brown fox jumps over the lazy dog
-                                </div>
-                                <div class="text-muted">
-                                    h2
-                                    <span class="float-right">
-                                    font-size: 2rem - line-height:1.2
-                                </span>
-                                </div>
-                                <hr>
-                                <div class="h3">
-                                    TForsaking monastic tradition, twelve jovial friars gave up their vocation for a questionable existence on the flying trapeze. Bawds jog, flick quartz, vex nymph.
-                                </div>
-                                <div class="text-muted">
-                                    h3
-                                    <span class="float-right">
-                                    font-size: 1.75rem - line-height:1.2
-                                </span>
-                                </div>
-                                <hr>
-                                <div class="h4">
-                                    TForsaking monastic tradition, twelve jovial friars gave up their vocation for a questionable existence on the flying trapeze. Bawds jog, flick quartz, vex nymph.
-                                </div>
-                                <div class="text-muted">
-                                    h4
-                                    <span>
-                                    font-size: 1.5rem - line-height:1.2
-                                </span>
-                                </div>
-                                <hr>
-                                <div class="h5">
-                                    TForsaking monastic tradition, twelve jovial friars gave up their vocation for a questionable existence on the flying trapeze. Bawds jog, flick quartz, vex nymph.
-                                </div>
-                                <div class="text-muted">
-                                    h5
-                                    <span class="float-right">
-                                    font-size: 1.25rem - line-height:1.2
-                                </span>
-                                </div>
-                                <hr>
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        Text transform
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <p class="text-lowercase">Lowercased text.</p>
-                                        <p class="text-uppercase"> UPPERCASED TEXT. </p>
-                                        <p class="text-capitalize">CapiTaliZed text.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <h1> Form Wizard </h1>
+            <div class="row">
+                <div class="col-sm-12"></div>
             </div>
-            <div class="row mt-5"></div>
         </div>
     </div>
 </div>
