--- a/pages/modals.html
+++ b/pages/modals.html
@@ -128,7 +128,7 @@
                 </a>
             </li>
             <li>
-                <a href="widgets.htmls">
+                <a href="widgets.html">
                     <i class="fa fa-flask"></i>
                     Widgets
                 </a>
