--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </a>
             </li>
             <li>
-                <a href="pages/widgets.htmls">
+                <a href="pages/widgets.html">
                     <i class="fa fa-flask"></i>
                     Widgets
                 </a>
