--- a/pages/collapsed-sidebar.html
+++ b/pages/collapsed-sidebar.html
@@ -120,7 +120,7 @@
                 </a>
             </li>
             <li>
-                <a href="widgets.htmls">
+                <a href="widgets.html">
                     <i class="fa fa-flask"></i>
                     Widgets
                 </a>
