--- a/pages/form.html
+++ b/pages/form.html
@@ -21,37 +21,75 @@
             </div>
         </div>
         <ul class="list-unstyled components">
-            <li class="active">
+            <li class="">
                 <a href="../index.html">
                     <i class="fas fa-home"></i>
-                    Home
+                    <span>Home</span>
                 </a>
             </li>
-            <li>
-                <a href="#chart" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                    <i class="fas fa-chart-line"></i>
-                    Charts
+            <li class="">
+                <a href="#layout" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="far fa-gem"></i>
+                    <span>Layouts</span>
                 </a>
-                <ul class="collapse list-unstyled show" >
+                <ul class="collapse list-unstyled" id="layout">
                     <li>
-                        <a href="chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
+                        <a href="top-navigation.html">
+                            <i class="far fa-circle mr-2"></i>
+                            <span>Top Navigation</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="chart-google.html"><i class="far fa-circle"></i> Google Chart</a>
+                        <a href="boxed.html"><i class="far fa-circle mr-2"></i> Boxed</a>
+                    </li>
+                    <li>
+                        <a href="fixed.html"><i class="far fa-circle mr-2"></i> Fixed</a>
+                    </li>
+                    <li>
+                        <a href="collapsed-sidebar.html"><i class="far fa-circle mr-2"></i>
+                            Collapsed Sidebar</a>
                     </li>
                 </ul>
             </li>
+
             <li>
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                    <i class="fas fa-table"></i>
-                    Tables
+                <a href="#ui" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-laptop"></i>
+                    UI Elements
                 </a>
-                <ul class="collapse list-unstyled show" id="homeSubmenu">
+                <ul class="collapse list-unstyled" id="ui">
                     <li>
-                        <a href="basic_tables.html"><i class="far fa-circle"></i> Basic Tables</a>
+                        <a href="colors.html"><i class="far fa-circle mr-2"></i> Colors</a>
                     </li>
                     <li>
-                        <a href="data-tables.html"><i class="far fa-circle"></i> Data Tables</a>
+                        <a href="typography.html"><i class="far fa-circle mr-2"></i> Typography</a>
+                    </li>
+                    <li>
+                        <a href="icons.html"><i class="far fa-circle mr-2"></i> Icons</a>
+                    </li>
+                    <li>
+                        <a href="buttons.html"><i class="far fa-circle mr-2"></i> Buttons</a>
+                    </li>
+                    <li>
+                        <a href="notifications.html"><i class="far fa-circle mr-2"></i> Notifications</a>
+                    </li>
+                    <li>
+                        <a href="modals.html"><i class="far fa-circle mr-2"></i> Modals</a>
+                    </li>
+                    <li>
+                        <a href="progress-bars.html"><i class="far fa-circle mr-2"></i> Progress Bars</a>
+                    </li>
+                    <li>
+                        <a href="tabs.html"><i class="far fa-circle mr-2"></i> Tabs</a>
+                    </li>
+                    <li>
+                        <a href="sliders.html"><i class="far fa-circle mr-2"></i> Sliders</a>
+                    </li>
+                    <li>
+                        <a href="tree-views.html"><i class="far fa-circle mr-2"></i> Tree Views</a>
+                    </li>
+                    <li>
+                        <a href="netables.html"><i class="far fa-circle mr-2"></i> Nestables</a>
                     </li>
                 </ul>
             </li>
@@ -60,9 +98,112 @@
                     <i class="fa fa-edit"></i>
                     Forms
                 </a>
-                <ul class="collapse list-unstyled show" id="form">
+                <ul class="collapse list-unstyled" id="form">
                     <li>
-                        <a href="pages/form.html"><i class="far fa-circle"></i> Basic Forms</a>
+                        <a href="form.html"><i class="far fa-circle mr-2"></i> Forms Elements</a>
+                    </li>
+                    <li>
+                        <a href="form-layout.html"><i class="far fa-circle mr-2"></i> Forms Layouts</a>
+                    </li>
+                    <li>
+                        <a href="form-wizard.html"><i class="far fa-circle mr-2"></i> Forms Wizard</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="cards.html">
+                    <i class="fas fa-chart-line"></i>
+                    Cards
+                </a>
+            </li>
+            <li>
+                <a href="widgets.html">
+                    <i class="fa fa-flask"></i>
+                    Widgets
+                </a>
+            </li>
+            <li>
+                <a href="#map" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-map-marked-alt"></i>
+                    Maps
+                </a>
+                <ul class="collapse list-unstyled" id="map">
+                    <li>
+                        <a href="map-googles.html"><i class="far fa-circle mr-2"></i> Google Maps</a>
+                    </li>
+                    <li>
+                        <a href="map-vector.html"><i class="far fa-circle mr-2"></i> Vector Maps</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#chart" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-chart-line"></i>
+                    Charts
+                </a>
+                <ul class="collapse list-unstyled" id="chart">
+                    <li>
+                        <a href="chart-js.html"><i class="far fa-circle mr-2"></i> Chart JS</a>
+                    </li>
+                    <li>
+                        <a href="chart-google.html"><i class="far fa-circle mr-2"></i> Google Chart</a>
+                    </li>
+                    <li>
+                        <a href="chart-google.html"><i class="far fa-circle mr-2"></i> Inline Charts</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-table"></i>
+                    Tables
+                </a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="basic_tables.html"><i class="far fa-circle mr-2"></i> Basic Tables</a>
+                    </li>
+                    <li>
+                        <a href="data-tables.html"><i class="far fa-circle mr-2"></i> Data Tables</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#extra" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-dungeon"></i>
+                    Extra
+                </a>
+                <ul class="collapse list-unstyled" id="extra">
+                    <li>
+                        <a href="extra-invoice.html"><i class="far fa-circle mr-2"></i> Invoice</a>
+                    </li>
+                    <li>
+                        <a href="extra-404.html"><i class="far fa-circle mr-2"></i> 404 Page</a>
+                    </li>
+                    <li>
+                        <a href="extra-500.html"><i class="far fa-circle mr-2"></i> 500 Page</a>
+                    </li>
+                    <li>
+                        <a href="extra-blank.html"><i class="far fa-circle mr-2"></i> Blank Page</a>
+                    </li>
+                    <li>
+                        <a href="extra-login.html"><i class="far fa-circle mr-2"></i> Login</a>
+                    </li>
+                    <li>
+                        <a href="extra-register.html"><i class="far fa-circle mr-2"></i> Register</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#menus" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-sitemap"></i>
+                    Menu
+                </a>
+                <ul class="collapse list-unstyled" id="menus">
+                    <li>
+                        <a href="menu-lv1.html"><i class="far fa-circle mr-2"></i> Level 1</a>
+                    </li>
+                    <li>
+                        <a href="menu-lv2.html"><i class="far fa-circle mr-2"></i> Level 2 & Sub</a>
                     </li>
                 </ul>
             </li>
@@ -111,6 +252,21 @@
                             </form>
                         </div>
                     </div>
+
+                    <div class="card mt-4">
+                        <div class="card-header">Input sizings</div>
+                        <div class="card-body">
+                            <form class="form-horizontal">
+                                <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg">
+                                <br>
+                                <input class="form-control" type="text" placeholder="Default input">
+                                <br>
+                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-lg">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
                     <div class="card mt-4">
                         <div class="card-header">Horizontal Form</div>
                         <div class="card-body">
@@ -144,113 +300,6 @@
                                     <button type="submit" class="btn btn-info float-right">Sign in</button>
                                 </div>
                             </form>
-                        </div>
-                    </div>
-                    <div class="card mt-4">
-                        <div class="card-header">Input sizings</div>
-                        <div class="card-body">
-                            <form class="form-horizontal">
-                                <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg">
-                                <br>
-                                <input class="form-control" type="text" placeholder="Default input">
-                                <br>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-lg">
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card mt-4">
-                        <div class="card-header">Validation Form</div>
-                        <div class="card-body">
-                            <form class="was-validated">
-                                <div class="form-row">
-                                    <div class="col-md-6 mb-3">
-                                        <label for="validationServer01">First name</label>
-                                        <input type="text" class="form-control is-valid" id="validationServer01" value="Alice" required="">
-                                        <div class="valid-feedback">
-                                            Looks good!
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="validationServer02">Last name</label>
-                                        <input type="text" class="form-control is-valid" id="validationServer02" value="Elizabeth" required="">
-                                        <div class="valid-feedback">
-                                            Looks good!
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="col-md-6 mb-3">
-                                        <label for="validationServerUsername">Username</label>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text" id="inputGroupPrepend3">@</span>
-                                            </div>
-                                            <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3" required="">
-                                            <div class="invalid-feedback">
-                                                Please choose a username.
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="validationServer04">State</label>
-                                        <select class="custom-select is-invalid" id="validationServer04" required="">
-                                            <option selected="" disabled="" value="">Choose...</option>
-                                            <option>...</option>
-                                        </select>
-                                        <div class="invalid-feedback">
-                                            Please select a valid state.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="customControlValidation2">Gender</label>
-                                    <div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
-                                            <label class="custom-control-label" for="customControlValidation2">Male</label>
-                                        </div>
-                                        <div class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
-                                            <label class="custom-control-label" for="customControlValidation3">Female</label>
-                                            <div class="ml-3 invalid-feedback">Please select a gender</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="col-md-6 mb-3">
-                                        <label for="validationServer03">City</label>
-                                        <input type="text" class="form-control is-invalid" id="validationServer03" required="">
-                                        <div class="invalid-feedback">
-                                            Please provide a valid city.
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="validationServer05">Zip</label>
-                                        <input type="text" class="form-control is-invalid" id="validationServer05" required="">
-                                        <div class="invalid-feedback">
-                                            Please provide a valid zip.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="validationTextarea">Description</label>
-                                    <textarea class="form-control is-invalid" id="validationTextarea" placeholder="Required example textarea" required></textarea>
-                                    <div class="invalid-feedback">
-                                        Please enter a message in the textarea.
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
-                                        <label class="custom-control-label" for="customControlValidation1">Agree to terms and conditions</label>
-                                        <div class="invalid-feedback">You must agree before submitting.</div>
-                                    </div>
-                                </div>
-                            </form>
-                            <hr>
-                            <button class="btn btn-primary" type="submit">Submit form</button>
                         </div>
                     </div>
                     <div class="card mt-4">
